tests/core/snapshots/test-dbl-usage-many.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

input PostInput {
  id: ID!
  title: String!
}

input UserInput {
  id: ID!
  name: String!
}

type Post {
  id: ID!
  title: String!
}

type Query {
  post(input: PostInput!): Post @http(url: "http://localhost:8080/user/{{.args.input.id}}")
  user(input: UserInput!): User @http(url: "http://localhost:8080/user/{{.args.input.id}}")
}

type User {
  id: ID!
  name: String!
}
