tests/core/snapshots/test-dbl-usage.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "type is used in input and output",
    "trace": [
      "tests/execution/test-dbl-usage.md 5#1"
    ],
    "description": null
  }
]
