tests/core/snapshots/test-dedupe.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  body: String
  id: Int
  title: String
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
  user: [User]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
