tests/core/snapshots/test-description-many.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Bar {
  """
  This is test2
  """
  baz: String
}

type Query {
  """
  This is test
  """
  foo: Bar @http(url: "http://jsonplacheholder.typicode.com/foo")
}
