tests/core/snapshots/test-directives-undef-null-fields.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "var 'garbage' is not set in the server config",
    "trace": [
      "Query",
      "userAccessHeadersVars",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "can't use list type 'id' here",
    "trace": [
      "Query",
      "userListArg",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "argument 'id' is a nullable type",
    "trace": [
      "Query",
      "userNullableArg",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "no argument 'uid' found",
    "trace": [
      "Query",
      "userUndefinedArg",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "value 'nonNullableNestedUser' is not of a scalar type",
    "trace": [
      "Post",
      "nestedNonScalar",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "value 'id' is a nullable type",
    "trace": [
      "Post",
      "nestedNullable",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "no value 'nonNullableUser.nonNullableNestedUser.userId' found",
    "trace": [
      "Post",
      "nestedUndefinedValue",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "value 'nestedUser' is a nullable type",
    "trace": [
      "Post",
      "nestedUserNullable",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "no argument 'id' found",
    "trace": [
      "Post",
      "userArg",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "unknown template directive 'Vale'",
    "trace": [
      "Post",
      "userInvalidDirective",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "value 'nonNullableUser' is not of a scalar type",
    "trace": [
      "Post",
      "userNonScalar",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "value 'userId' is a nullable type",
    "trace": [
      "Post",
      "userNullValue",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "value 'user' is a nullable type",
    "trace": [
      "Post",
      "userNullable",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "no value 'userid' found",
    "trace": [
      "Post",
      "userUndefinedValue",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "no value 'userid' found",
    "trace": [
      "Post",
      "userUndefinedValueQuery",
      "@http",
      "query"
    ],
    "description": null
  }
]
