tests/core/snapshots/test-discriminator-invalid.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "The `field` cannot be an empty string for the `@discriminate` of type FooBar",
    "trace": [
      "Query",
      "foo"
    ],
    "description": null
  }
]
